--- a/web/themes/custom/imparables_bb5/templates/layout/page--user.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page--user.html.twig
@@ -67,15 +67,12 @@
  * @see html.html.twig
  */
 #}
-
 {# see https://www.drupal.org/project/drupal/issues/953034#comment-14192130 #}
 {% set sidebar_first_exists = page.sidebar_first|render|striptags('<img><video><audio><drupal-render-placeholder>')|trim is not empty %}
 {% set sidebar_second_exists = page.sidebar_second|render|striptags('<img><video><audio><drupal-render-placeholder>')|trim is not empty %}
 
 <div id="page-wrapper">
-
   <div id="page">
-
 
     <!-- ========== HEADER ========== -->
     <!-- <header id="header" class="navbar navbar-expand-lg navbar-end navbar-light" -->
@@ -87,7 +84,7 @@
 
       <!-- Alert -->
       <div class="alert alert-primary text-center rounded-0 mb-0 alert-dismissible fade show" role="alert">
-        Programas para <span class="fw-semibold"><a class="link link-white" href="/nosotros">Olimpiadas de Informática / Concursos de programación</a></span>
+        Programa de entrenamiento para <span class="fw-semibold"><a class="link link-white" href="/nosotros">Olimpiadas de Informática Escolar</a></span>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
       <!-- End Alert -->
@@ -212,14 +209,14 @@
                   <div class="navbar-dropdown-menu-inner">
                     <div class="row">
                       <div class="col-sm-6 col-md" style="min-width: 10rem;">
-                        <span class="dropdown-header">Recursos</span>
-                        <a class="dropdown-item" href="/tutoriales"><i class="bi-code-slash dropdown-item-icon"></i>Tutoriales</a>
-                        <a class="dropdown-item" href="/novedades"><i class="bi-code-slash dropdown-item-icon"></i>Novedades</a>
+                        <span class="dropdown-header">Comunidad</span>
+                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Comunidad</a>
+                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Tutoriales</a>
                       </div>
                       <div class="col-sm-6 col-md" style="min-width: 15rem;">
-                        <span class="dropdown-header">Comunidad</span>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Juez en línea</a>
-                        <a class="dropdown-item" href="#"><i class="bi-laptop dropdown-item-icon"></i>Foro</a>
+                        <span class="dropdown-header">Juez en línea</span>
+                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Juez</a>
+                        <a class="dropdown-item" href="#"><i class="bi-laptop dropdown-item-icon"></i>Juez</a>
                       </div>
                     </div>
                     <!-- End Row -->
@@ -233,7 +230,7 @@
               <!-- End Dropdown -->
 
               <li class="nav-item">
-                <a class="nav-link acive" href="/blog">Convenios</a>
+                <a class="nav-link acive" href="/blog">Novedades</a>
               </li>
 
             {% if not logged_in %}
@@ -319,6 +316,7 @@
     </header>
     <!-- ========== END HEADER ========== -->
 
+
     {% if page.highlighted %}
       <div class="highlighted">
         <aside class="{{ container }} section clearfix" role="complementary">
@@ -336,19 +334,164 @@
       {% endblock %}
     {% endif %}
     <div id="main-wrapper" class="layout-main-wrapper clearfix content-space-t-4">
-
       {% block content %}
         <div id="main" class="{{ container }}">
-        
-          {{ page.breadcrumb }}
+          <!-- aqui iba el breadcrumb -->
           <div class="row row-offcanvas row-offcanvas-left clearfix">
               <main{{ content_attributes }}>
-
                 <section class="section">
+                  {# page.breadcrumb #}
                   <a href="#main-content" id="main-content" tabindex="-1"></a>
-                  {{ page.content }}
-                </section>
 
+
+    <!-- Content -->
+    <div class="container content-space-1 content-space-t-lg-1 content-space-b-lg-2 mt-lg-n10">
+      
+      <div class="row">
+        <div class="col-lg-3">
+          <!-- Navbar -->
+          <div class="navbar-expand-lg navbar-light">
+            <div id="sidebarNav" class="collapse navbar-collapse navbar-vertical">
+              <!-- Card -->
+              <div class="card flex-grow-1 mb-5">
+                <div class="card-body">
+                  <!-- Avatar -->
+                  <div class="d-none d-lg-block text-center mb-5">
+                    <div class="avatar avatar-xxl avatar-circle mb-3">
+                      <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
+                      <img class="avatar-status avatar-lg-status" src="/themes/custom/imparables_bb5/assets/svg/illustrations/top-vendor.svg" alt="Image Description" data-bs-toggle="tooltip" data-bs-placement="top" title="Verified user">
+                    </div>
+
+                    <h4 class="card-title mb-0">Natalie Curtis</h4>
+                    <p class="card-text small">natalie@example.com</p>
+                  </div>
+                  <!-- End Avatar -->
+
+                  <!-- Nav -->
+                  <span class="text-cap">Account</span>
+
+                  <!-- List -->
+                  <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="./account-overview.html">
+                        <i class="bi-person-badge nav-icon"></i> Personal info
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-security.html">
+                        <i class="bi-shield-shaded nav-icon"></i> Security
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-notifications.html">
+                        <i class="bi-bell nav-icon"></i> Notifications
+                        <span class="badge bg-soft-dark text-dark rounded-pill nav-link-badge">1</span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-preferences.html">
+                        <i class="bi-sliders nav-icon"></i> Preferences
+                      </a>
+                    </li>
+                  </ul>
+                  <!-- End List -->
+
+                  <span class="text-cap">Shopping</span>
+
+                  <!-- List -->
+                  <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-orders.html">
+                        <i class="bi-basket nav-icon"></i> Your orders
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-wishlist.html">
+                        <i class="bi-heart nav-icon"></i> Wishlist
+                        <span class="badge bg-soft-dark text-dark rounded-pill nav-link-badge">2</span>
+                      </a>
+                    </li>
+                  </ul>
+                  <!-- End List -->
+
+                  <span class="text-cap">Billing</span>
+
+                  <!-- List -->
+                  <ul class="nav nav-sm nav-tabs nav-vertical">
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-payments.html">
+                        <i class="bi-credit-card nav-icon"></i> Payments
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-address.html">
+                        <i class="bi-geo-alt nav-icon"></i> Address
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link " href="./account-teams.html">
+                        <i class="bi-people nav-icon"></i> Teams
+                        <span class="badge bg-soft-dark text-dark rounded-pill nav-link-badge">+2 new users</span>
+                      </a>
+                    </li>
+                  </ul>
+                  <!-- End List -->
+
+                  <div class="d-lg-none">
+                    <div class="dropdown-divider"></div>
+
+                    <!-- List -->
+                    <ul class="nav nav-sm nav-tabs nav-vertical">
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">
+                          <i class="bi-box-arrow-right nav-icon"></i> Log out
+                        </a>
+                      </li>
+                    </ul>
+                    <!-- End List -->
+                  </div>
+                  <!-- End Nav -->
+                </div>
+              </div>
+              <!-- End Card -->
+            </div>
+          </div>
+          <!-- End Navbar -->
+        </div>
+        <!-- End Col -->
+
+        <div class="col-lg-9">
+          <div class="d-grid gap-3 gap-lg-5">
+            <!-- Card -->
+            <div class="card">
+
+
+              <div class="card-header border-bottom">
+                <h4 class="card-header-title">Basic info</h4>
+              </div>
+
+              <!-- Body -->
+              <div class="card-body">
+
+              {{ page.content }}
+
+              </div>
+              <!-- End Body -->
+
+            </div>
+            <!-- End Card -->
+
+          </div>
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
+    </div>
+    <!-- End Content -->
+
+
+                  
+                </section>
               </main>
             {% if sidebar_first_exists %}
               <div{{ sidebar_first_attributes }}>
