--- a/web/themes/custom/imparables_bb5/templates/content/node--3.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/content/node--3.html.twig
@@ -75,150 +75,151 @@
 <article{{ attributes.addClass(classes) }}>
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
 
+
+
+
     <!-- Hero -->
     <div class="position-relative">
       <!-- Swiper Main Slider -->
-      <div class="js-swiper-shop-classic-hero swiper bg-light">
+      <div class="js-swiper-blog-journal-hero swiper">
         <div class="swiper-wrapper">
-          <!-- Slide -->
-          <div class="swiper-slide">
+          <div class="js-swiper-slide-preload swiper-slide d-flex gradient-x-overlay-sm-dark bg-img-start" style="background-image: url(/themes/custom/imparables_bb5/assets/img/1920x1080/img3.jpg); min-height: 40rem;">
             <!-- Container -->
-            <div class="container content-space-t-2 content-space-b-3">
-              <div class="row align-items-lg-center">
-                <div class="col-lg-5 order-lg-2 mb-7 mb-lg-0">
-                  <div class="mb-6">
-                    <h1 class="display-4 mb-4">Front original design cap</h1>
-                    <p>As well as being game-changers when it comes to technical innovation, Front has some of the bestselling cap in its locker.</p>
+            <div class="container d-flex align-items-center" style="min-height: 20rem;">
+              <div class="w-lg-50 me-3">
+                <!-- Media -->
+                <div class="d-flex align-items-center mb-3">
+                  <div class="flex-shrink-0">
+                    <div class="avatar avatar-circle">
+                      <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img10.jpg" alt="Image Description">
+                    </div>
                   </div>
 
-                  <div class="d-flex gap-2">
-                    <a class="btn btn-primary rounded-pill" href="#">$59 - Add to cart</a>
-                    <a class="btn btn-outline-primary btn-icon rounded-circle" href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Save for later">
-                      <i class="bi-heart-fill"></i>
-                    </a>
+                  <div class="flex-grow-1 ms-3">
+                    <a class="text-white" href="./blog-article.html">Christina Kray</a>
                   </div>
                 </div>
-                <!-- End Col -->
+                <!-- End Media -->
 
-                <div class="col-lg-6 order-lg-1">
-                  <div class="w-75 mx-auto">
-                    <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/img/mockups/img5.png" alt="Image Description">
-                  </div>
+                <div class="mb-5">
+                  <h2 class="h1 text-white">Front Interview with a Lead Designer of the Hubble</h2>
                 </div>
-                <!-- End Col -->
+                
+                <a class="btn btn-primary btn-transition" href="./blog-article.html">Read article <i class="bi-chevron-right small ms-1"></i></a>
               </div>
-              <!-- End Row -->
             </div>
             <!-- End Container -->
           </div>
-          <!-- End Slide -->
 
-          <!-- Slide -->
-          <div class="swiper-slide">
+          <div class="js-swiper-slide-preload swiper-slide d-flex gradient-x-overlay-sm-dark bg-img-start" style="background-image: url(/themes/custom/imparables_bb5/assets/img/1920x1080/img5.jpg); min-height: 40rem;">
             <!-- Container -->
-            <div class="container content-space-t-2 content-space-b-3">
-              <div class="row align-items-lg-center">
-                <div class="col-lg-5 order-lg-2 mb-7 mb-lg-0">
-                  <div class="mb-6">
-                    <h2 class="display-4 mb-4">Apple iPad Pro</h2>
-                    <p>It's all new, all screen, and all powerful. Completely redesigned and packed with our most advanced technology, it will make you rethink what iPad is capable of.</p>
+            <div class="container d-flex align-items-center" style="min-height: 20rem;">
+              <div class="w-lg-50 me-3">
+                <!-- Media -->
+                <div class="d-flex align-items-center mb-3">
+                  <div class="flex-shrink-0">
+                    <div class="avatar avatar-circle">
+                      <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img10.jpg" alt="Image Description">
+                    </div>
                   </div>
 
-                  <div class="d-flex gap-2">
-                    <a class="btn btn-primary rounded-pill" href="#">$799 - Add to cart</a>
-                    <a class="btn btn-outline-primary btn-icon rounded-circle" href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Save for later">
-                      <i class="bi-heart-fill"></i>
-                    </a>
+                  <div class="flex-grow-1 ms-3">
+                    <a class="text-white" href="./blog-article.html">Christina Kray</a>
                   </div>
                 </div>
-                <!-- End Col -->
+                <!-- End Media -->
 
-                <div class="col-lg-6 order-lg-1">
-                  <div class="w-75 mx-auto">
-                    <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/img/mockups/img6.png" alt="Image Description">
-                  </div>
+                <div class="mb-5">
+                  <h2 class="h1 text-white">Front Corporate - let's work together</h2>
                 </div>
-                <!-- End Col -->
+                
+                <a class="btn btn-primary btn-transition" href="./blog-article.html">Read article <i class="bi-chevron-right small ms-1"></i></a>
               </div>
-              <!-- End Row -->
             </div>
             <!-- End Container -->
           </div>
-          <!-- End Slide -->
 
-          <!-- Slide -->
-          <div class="swiper-slide">
+          <div class="js-swiper-slide-preload swiper-slide d-flex gradient-x-overlay-sm-dark bg-img-start" style="background-image: url(/themes/custom/imparables_bb5/assets/img/1920x1080/img4.jpg); min-height: 40rem;">
             <!-- Container -->
-            <div class="container content-space-t-2 content-space-b-3">
-              <div class="row align-items-lg-center">
-                <div class="col-lg-5 order-lg-2 mb-7 mb-lg-0">
-                  <div class="mb-6">
-                    <h3 class="display-4 mb-4">Celio hoodie</h3>
-                    <p>Founded in 1985, French label Celio channels 30 years of expertise into its contemporary menswear range. Expect fly style for a city or beach with its denim shorts, chinos and printed jersey.</p>
+            <div class="container d-flex align-items-center" style="min-height: 20rem;">
+              <div class="w-lg-50 me-3">
+                <!-- Media -->
+                <div class="d-flex align-items-center mb-3">
+                  <div class="flex-shrink-0">
+                    <div class="avatar avatar-circle">
+                      <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img4.jpg" alt="Image Description">
+                    </div>
                   </div>
-
-                  <div class="d-flex gap-2">
-                    <a class="btn btn-primary rounded-pill" href="#">$15 - Add to cart</a>
-                    <a class="btn btn-outline-primary btn-icon rounded-circle" href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Save for later">
-                      <i class="bi-heart-fill"></i>
-                    </a>
+                  <div class="flex-grow-1 ms-3">
+                    <a class="text-white" href="./blog-article.html">Jeff Fisher</a>
                   </div>
                 </div>
-                <!-- End Col -->
+                <!-- End Media -->
 
-                <div class="col-lg-6 order-lg-1">
-                  <div class="w-75 mx-auto">
-                    <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/img/mockups/img1.png" alt="Image Description">
-                  </div>
+                <div class="mb-5">
+                  <h2 class="h1 text-white">How Google Assistant now helps you record stories</h2>
                 </div>
-                <!-- End Col -->
+                
+                <a class="btn btn-primary btn-transition" href="./blog-article.html">Read article <i class="bi-chevron-right small ms-1"></i></a>
               </div>
-              <!-- End Row -->
             </div>
             <!-- End Container -->
           </div>
-          <!-- End Slide -->
         </div>
 
-        <!-- Arrows -->
-        <div class="js-swiper-shop-classic-hero-button-next swiper-button-next"></div>
-        <div class="js-swiper-shop-classic-hero-button-prev swiper-button-prev"></div>
+        <!-- Swiper Pagination -->
+        <div class="js-swiper-blog-journal-hero-pagination swiper-pagination swiper-pagination-light swiper-pagination-vertical swiper-pagination-middle-y-end me-3 d-lg-none"></div>
+
+        <div class="js-swiper-preloader d-flex align-items-center justify-content-center top-0 position-absolute w-100 h-100 bg-white zi-1">
+          <div class="spinner spinner-border text-primary"></div>
+        </div>
       </div>
       <!-- End Swiper Main Slider -->
 
       <!-- Swiper Thumbs Slider -->
-      <div class="position-absolute bottom-0 start-0 end-0 mb-3">
-        <div class="js-swiper-shop-hero-thumbs swiper" style="max-width: 13rem;">
-          <div class="swiper-wrapper">
-            <!-- Slide -->
-            <div class="swiper-slide">
-              <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
-                <img class="swiper-thumb-progress-avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img11.jpg" alt="Image Description">
-              </a>
-            </div>
-            <!-- End Slide -->
+      <div class="d-none d-lg-block container translate-middle-y position-absolute top-50 start-0 end-0 zi-2">
+        <div class="translate-middle-y position-absolute top-50 end-0">
+          <div class="js-swiper-blog-journal-hero-thumbs swiper" style="opacity:0;max-width: 13rem;">
+            <div class="swiper-wrapper">
+              <!-- Slide -->
+              <div class="swiper-slide swiper-pagination-progress swiper-pagination-progress-light py-3">
+                <p class="text-white">Front Interview with a Lead Designer of the Hubble</p>
 
-            <!-- Slide -->
-            <div class="swiper-slide">
-              <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
-                <img class="swiper-thumb-progress-avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img14.jpg" alt="Image Description">
-              </a>
-            </div>
-            <!-- End Slide -->
+                <div class="swiper-pagination-progress-body">
+                  <div class="js-swiper-pagination-progress-body-helper swiper-pagination-progress-body-helper"></div>
+                </div>
+              </div>
+              <!-- End Slide -->
 
-            <!-- Slide -->
-            <div class="swiper-slide">
-              <a class="js-swiper-thumb-progress swiper-thumb-progress-avatar" href="javascript:;" tabindex="0">
-                <img class="swiper-thumb-progress-avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img15.jpg" alt="Image Description">
-              </a>
+              <!-- Slide -->
+              <div class="swiper-slide swiper-pagination-progress swiper-pagination-progress-light py-3">
+                <p class="text-white">Front Corporate - let's work together</p>
+
+                <div class="swiper-pagination-progress-body">
+                  <div class="js-swiper-pagination-progress-body-helper swiper-pagination-progress-body-helper"></div>
+                </div>
+              </div>
+              <!-- End Slide -->
+
+              <!-- Slide -->
+              <div class="swiper-slide swiper-pagination-progress swiper-pagination-progress-light py-3">
+                <p class="text-white">How Google Assistant now helps you record stories</p>
+
+                <div class="swiper-pagination-progress-body">
+                  <div class="js-swiper-pagination-progress-body-helper swiper-pagination-progress-body-helper"></div>
+                </div>
+              </div>
+              <!-- End Slide -->
             </div>
-            <!-- End Slide -->
           </div>
         </div>
       </div>
       <!-- End Swiper Thumbs Slider -->
     </div>
     <!-- End Hero -->
+
+
+
 
 
     {{ content }}
