--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--login.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--login.html.twig
@@ -15,7 +15,7 @@
 #}
 
 <!-- Form -->
-<div class="container content-space-2 content-space-lg-3">
+<div class="container">
   <div class="flex-grow-1 mx-auto" style="max-width: 28rem;">
     <!-- Heading -->
     <div class="text-center mb-5 mb-md-7">
